# olio-ohjelmointi

./: .gitignore
H1/: main.cpp
H2_A/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
H2_b_toimiva/: CMakeLists.txt  car.cpp  car.h  main.cpp
build-H1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-H2_A-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-H2_B-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-h3b-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-h4-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-h5-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-h6a-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-h6b-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-h7-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
h5/: CMakeLists.txt  classa1.h  (+2 more)
(+128 files in other folders)
